--- a/front/package.json
+++ b/front/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.6.1",
-    "@types/jest": "^23.3.9",
+    "@material-ui/icons": "^3.0.1",
+    "@storybook/addon-info": "^4.0.10",
+    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/storybook__react": "^4.0.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -18,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +33,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@storybook/react": "^4.0.10",
+    "@storybook/addon-actions": "^4.0.10",
+    "@storybook/addon-links": "^4.0.10",
+    "@storybook/addons": "^4.0.10",
+    "@babel/core": "^7.1.6",
+    "babel-loader": "^8.0.4"
+  }
 }
