--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/storybook__react": "^4.0.0",
+    "mobx-react": "^5.4.3",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
