--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://eventsgg.github.io/myevents",
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
@@ -11,11 +12,12 @@
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/storybook__react": "^4.0.0",
+    "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^3.1.6"
   },
   "scripts": {
@@ -24,7 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,11 +40,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/react": "^4.0.10",
+    "@babel/core": "^7.1.6",
     "@storybook/addon-actions": "^4.0.10",
     "@storybook/addon-links": "^4.0.10",
     "@storybook/addons": "^4.0.10",
-    "@babel/core": "^7.1.6",
-    "babel-loader": "^8.0.4"
+    "@storybook/react": "^4.0.10",
+    "babel-loader": "^8.0.4",
+    "gh-pages": "^2.0.1",
+    "mobx-react-devtools": "^6.0.3"
   }
 }
