--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.3",
+    "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.6"
   },
   "scripts": {
@@ -28,7 +29,8 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "analyze": "source-map-explorer build/static/js/main.*"
   },
   "eslintConfig": {
     "extends": "react-app"
