--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "jsx": "preserve",
     "noImplicitAny": false,
+    "experimentalDecorators": true,
     "lib": [
       "dom",
       "dom.iterable",
