--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/storybook__react": "^4.0.0",
+    "babel-plugin-relay": "^2.0.0",
+    "graphql": "^14.1.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-relay": "^2.0.0",
     "react-scripts": "^2.1.3",
     "source-map-explorer": "^1.6.0",
     "typescript": "^3.1.6"
