--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://eventsgg.github.io/myevents",
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
@@ -11,9 +12,11 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/relay-runtime": "^1.3.8",
     "@types/storybook__react": "^4.0.0",
-    "babel-plugin-relay": "^2.0.0",
+    "babel-plugin-relay": "^2.0.0-rc.2",
     "graphql": "^14.1.1",
+    "graphql-compiler": "^2.0.0-rc.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
@@ -21,11 +24,13 @@
     "react-dom": "^16.6.3",
     "react-relay": "^2.0.0",
     "react-scripts": "^2.1.3",
-    "source-map-explorer": "^1.6.0",
+    "recompose": "^0.30.0",
+    "recompose-relay-modern": "^1.0.2",
+    "relay-compose": "^2.0.3",
     "typescript": "^3.1.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & npm run relay",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -33,12 +38,13 @@
     "build-storybook": "build-storybook -s public",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "analyze": "source-map-explorer build/static/js/main.*"
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "relay": "relay-compiler --src ./src --schema ../backend/schema.graphql --language typescript --extensions js jsx ts tsx --watch"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "./eslintrc.js"
+      "./.eslintrc.js"
     ]
   },
   "browserslist": [
@@ -55,6 +61,9 @@
     "@storybook/react": "^4.0.10",
     "babel-loader": "^8.0.4",
     "gh-pages": "^2.0.1",
-    "mobx-react-devtools": "^6.0.3"
+    "source-map-explorer": "^1.6.0",
+    "mobx-react-devtools": "^6.0.3",
+    "relay-compiler": "^2.0.0",
+    "relay-compiler-language-typescript": "^2.0.0"
   }
 }
