--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-relay": "^2.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "recompose": "^0.30.0",
     "recompose-relay-modern": "^1.0.2",
