Доделал прогресс бар

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,31 +8,21 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@storybook/addon-info": "^4.0.10",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
-    "@types/relay-runtime": "^1.3.8",
-    "@types/storybook__react": "^4.0.0",
-    "babel-plugin-relay": "^2.0.0-rc.2",
     "google-map-react": "^1.1.2",
     "graphql": "^14.1.1",
-    "graphql-compiler": "^2.0.0-rc.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
-    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-relay": "^2.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "recompose": "^0.30.0",
-    "recompose-relay-modern": "^1.0.2",
-    "relay-compose": "^2.0.3",
-    "typescript": "^3.1.6"
+    "relay-compose": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start & npm run relay",
+    "start-server": "cd ../backend && python3 ./app.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -66,6 +56,16 @@
     "source-map-explorer": "^1.6.0",
     "mobx-react-devtools": "^6.0.3",
     "relay-compiler": "^2.0.0",
-    "relay-compiler-language-typescript": "^2.0.0"
+    "relay-compiler-language-typescript": "^2.0.0",
+    "graphql-compiler": "^2.0.0-rc.1",
+    "node-sass": "^4.11.0",
+    "babel-plugin-relay": "^2.0.0-rc.2",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.10",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10",
+    "@types/relay-runtime": "^1.3.8",
+    "@types/storybook__react": "^4.0.0",
+    "typescript": "^3.1.6"
   }
 }
