--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.6.3",
     "react-relay": "^2.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "2.1.8",
     "recompose": "^0.30.0",
     "relay-compose": "^2.0.3"
   },
