--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "@types/react-dom": "^16.0.10",
     "@types/relay-runtime": "^1.3.8",
     "@types/storybook__react": "^4.0.0",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.1.6"
   }
 }
