fix to old docker-compose file

--- a/frontend/Docker-compose.yml
+++ b/frontend/Docker-compose.yml
@@ -1,7 +1,11 @@
-version: '3.4'
+version: '3.6'
 
 services:
   web:
+    restart: always
+    build: 
+      context: .
+      dockerfile: Dockerfile-production
     command: npm start
     ports:
       - 3000:3000
