Донастроил докер для фронтенда

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,34 +4,46 @@
   "private": true,
   "homepage": "http://eventsgg.github.io/myevents",
   "proxy": "http://127.0.0.1:5000",
-  "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@storybook/addon-info": "^4.0.10",
-    "google-map-react": "^1.1.2",
-    "graphql": "^14.1.1",
-    "mobx": "^5.9.0",
-    "mobx-react": "^5.4.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-relay": "^2.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
-    "recompose": "^0.30.0",
-    "relay-compose": "^2.0.3"
-  },
   "scripts": {
-    "start": "react-scripts start & npm run relay",
+    "start": "react-scripts start & npm run relay-compile --watch",
     "start-server": "cd ../backend && python3 ./app.py",
-    "build": "react-scripts build",
+    "build": "npm run relay-compile && react-scripts build",
+    "relay-compile": "npx relay-compiler --src ./src --schema ../backend/schema.graphql --language typescript --extensions js jsx ts tsx --watchman false",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "relay": "relay-compiler --src ./src --schema ../backend/schema.graphql --language typescript --extensions js jsx ts tsx --watch"
+    "analyze": "source-map-explorer build/static/js/main.*"
+  },
+  "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@storybook/addon-info": "^4.0.10",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.10",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/relay-runtime": "^1.3.8",
+    "@types/storybook__react": "^4.0.0",
+    "babel-plugin-relay": "^2.0.0-rc.2",
+    "google-map-react": "^1.1.2",
+    "graphql": "^14.1.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.0.3",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-relay": "^3.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.8",
+    "recompose": "^0.30.0",
+    "relay-compiler": "^3.0.0",
+    "relay-compiler-language-typescript": "^2.0.0",
+    "relay-compose": "^2.0.3",
+    "typescript": "^3.1.6"
   },
   "eslintConfig": {
     "extends": [
@@ -54,19 +66,7 @@
     "babel-loader": "^8.0.4",
     "gh-pages": "^2.0.1",
     "source-map-explorer": "^1.6.0",
-    "mobx-react-devtools": "^6.0.3",
-    "relay-compiler": "^2.0.0",
-    "relay-compiler-language-typescript": "^2.0.0",
     "graphql-compiler": "^2.0.0-rc.1",
-    "node-sass": "^4.11.0",
-    "babel-plugin-relay": "^2.0.0-rc.2",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
-    "@types/relay-runtime": "^1.3.8",
-    "@types/storybook__react": "^4.0.0",
-    "@types/react-router-dom": "^4.3.1",
-    "typescript": "^3.1.6"
+    "node-sass": "^4.11.0"
   }
 }
