relay models updated on frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://eventsgg.github.io/myevents",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://157.230.127.115:8000",
   "scripts": {
     "start": "react-scripts start & npm run relay-compile --watch",
     "start-server": "cd ../backend && python3 ./app.py",
     "build": "npm run relay-compile && react-scripts build",
-    "relay-compile": "npx relay-compiler --src ./src --schema ../backend/schema.graphql --language typescript --extensions js jsx ts tsx --watchman false",
+    "relay-compile": "npx relay-compiler --src ./src --schema ../backend/myevents/schema.json --language typescript --extensions js jsx ts tsx --watchman false",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
