--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,31 @@
-django-allauth
-Werkzeug
-pyOpenSSL
-Django
-graphene_django
-django_extensions
-psycopg2-binary
-django-filter
+aniso8601==3.0.2
+asn1crypto==0.24.0
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+cryptography==2.6.1
+defusedxml==0.5.0
+Django==2.2
+django-allauth==0.39.1
+django-extensions==2.1.6
+django-filter==2.1.0
+graphene==2.1.3
+graphene-django==2.2.0
+graphql-core==2.1
+graphql-relay==0.4.5
+idna==2.8
+oauthlib==3.0.1
+promise==2.2.1
+psycopg2-binary==2.8.1
+pycparser==2.19
+pyOpenSSL==19.0.0
+python3-openid==3.1.0
+pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
+Rx==1.6.1
+singledispatch==3.4.0.3
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.24.1
+Werkzeug==0.15.2
