--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/relay-runtime": "^1.3.8",
     "@types/storybook__react": "^4.0.0",
+    "@types/yup": "^0.26.13",
     "babel-plugin-relay": "^2.0.0-rc.2",
+    "formik": "^1.5.4",
     "google-map-react": "^1.1.2",
     "graphql": "^14.1.1",
     "mobx": "^5.9.0",
@@ -43,7 +45,8 @@
     "relay-compiler": "^3.0.0",
     "relay-compiler-language-typescript": "^2.0.0",
     "relay-compose": "^2.0.3",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "yup": "^0.27.0"
   },
   "eslintConfig": {
     "extends": [
