--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,71 +5,43 @@
   "homepage": "http://eventsgg.github.io/myevents",
   "proxy": "https://157.230.127.115:8000",
   "scripts": {
-    "start": "npm run relay-compile --watch & react-scripts start",
-    "start-server": "cd ../backend && python3 ./app.py",
-    "build": "npm run relay-compile && react-scripts build",
-    "relay-compile": "npx relay-compiler --src ./src --schema ../backend/myevents/schema.json --language typescript --extensions js jsx ts tsx --watchman false",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "analyze": "source-map-explorer build/static/js/main.*"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "@storybook/addon-info": "^4.0.10",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/relay-runtime": "^1.3.8",
-    "@types/storybook__react": "^4.0.0",
-    "@types/yup": "^0.26.13",
-    "babel-plugin-relay": "^2.0.0-rc.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "apollo-boost": "^0.3.1",
     "formik": "^1.5.4",
     "google-map-react": "^1.1.2",
-    "graphql": "^14.1.1",
+    "graphql": "^14.3.0",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "jss": "^9.8.7",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-relay": "^3.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.0.1",
-    "recompose": "^0.30.0",
-    "relay-compiler": "^3.0.0",
-    "relay-compiler-language-typescript": "^2.0.0",
-    "relay-compose": "^2.0.3",
-    "typescript": "^3.1.6",
+    "next": "^8.1.0",
+    "next-compose-plugins": "^2.2.0",
+    "next-images": "^1.1.1",
+    "next-link-active": "^1.0.1",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
+    "react-dom": "^16.8.6",
+    "react-jss": "^8.6.1",
     "yup": "^0.27.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "./.eslintrc.js"
-    ]
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@storybook/addon-actions": "^4.0.10",
-    "@storybook/addon-links": "^4.0.10",
-    "@storybook/addons": "^4.0.10",
-    "@storybook/react": "^4.0.10",
-    "babel-loader": "^8.0.4",
-    "gh-pages": "^2.0.1",
-    "source-map-explorer": "^1.6.0",
-    "graphql-compiler": "^2.0.0-rc.1",
-    "node-sass": "^4.11.0"
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@types/next": "^8.0.5",
+    "@types/node": "^12.0.2",
+    "@types/react": "^16.8.17",
+    "@types/styled-jsx": "^2.2.8",
+    "@types/yup": "^0.26.13"
   }
 }
