--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.3.1",
@@ -21,8 +21,8 @@
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
-    "jss": "^9.8.7",
     "mobx": "^5.9.0",
+    "clsx": "latest",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.0.3",
     "next": "^8.1.0",
@@ -32,7 +32,6 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
-    "react-jss": "^8.6.1",
     "yup": "^0.27.0"
   },
   "devDependencies": {
@@ -42,6 +41,7 @@
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.17",
     "@types/styled-jsx": "^2.2.8",
-    "@types/yup": "^0.26.13"
+    "@types/yup": "^0.26.13",
+    "source-map-explorer": "latest"
   }
 }
